# kaminim00g

./: .gitignore  CMakeLists.txt  README.md
Source/: Chorus.h  Envelope.cpp  Envelope.h  KamLookAndFeel.cpp  KamLookAndFeel.h  LadderFilter.cpp  LadderFilter.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
